WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80740
Crash in DisplayRefreshMonitor::notifyClients()
https://bugs.webkit.org/show_bug.cgi?id=80740
Summary
Crash in DisplayRefreshMonitor::notifyClients()
mitz
Reported
2012-03-09 17:19:00 PST
Crash in DisplayRefreshMonitor::notifyClients()
Attachments
Stop the display link before cancelling outstanding calls to refreshDisplayOnMainThread()
(1.90 KB, patch)
2012-03-09 17:23 PST
,
mitz
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-03-09 17:19:34 PST
<
rdar://problem/11018851
>
mitz
Comment 2
2012-03-09 17:23:46 PST
Created
attachment 131141
[details]
Stop the display link before cancelling outstanding calls to refreshDisplayOnMainThread()
mitz
Comment 3
2012-03-09 18:10:35 PST
Fixed in <
http://trac.webkit.org/r110356
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug