<rdar://problem/11018851> Crash in DisplayRefreshMonitor::notifyClients() https://bugs.webkit.org/show_bug.cgi?id=80740

Reviewed by Sam Weinig.

No test, since this race condition cannot be reproduced reliably.

* platform/graphics/mac/DisplayRefreshMonitorMac.cpp:
(WebCore::DisplayRefreshMonitor::~DisplayRefreshMonitor): Changed to stop the display link
first, then cancel any outstanding calls to refreshDisplayOnMainThread(). When doing things
the other way around, the display link can fire after outstanding calls have been canceled,
and enqueue new calls on the main thread, which will be dispatched after monitor destruction.



Canonical link: https://commits.webkit.org/97948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110356 268f45cc-cd09-0410-ab3c-d52691b4dbfc